<resources>
    <string name="app_name">Imgur Gallery Example</string>
    <string name="button_login">LOGIN IMGUR</string>
    <string name="button_upload">SUBIR FOTO</string>
    <string name="upload">SUBIR</string>
    <string name="image_title">Título</string>
    <string name="image_title_default">Sin título</string>
    <string name="image_description">Descripción</string>
    <string name="image_description_default">Sin descripción</string>

    <!-- GENERAL -->
    <string name="BTN_ACEPT">ACEPTAR</string>
    <string name="BTN_CONTINUE">CONTINUAR</string>
    <string name="BTN_CONFIRM">CONFIRMAR</string>
    <string name="BTN_DECLINE">RECHAZAR</string>
    <string name="BTN_YES">SI</string>
    <string name="BTN_NO">NO</string>
    <string name="BTN_OMIT">OMITIR</string>
    <string name="BTN_SAVE_CHANGES">GUARDAR CAMBIOS</string>
    <string name="BTN_CANCEL">CANCELAR</string>
    <string name="BTN_CLOSE">CERRAR</string>
    <string name="ERROR_CONECTION_MSG">Hubo un error de conexión. Verifica que tienes acceso a internet.</string>
    <string name="ERROR_DELETING">Ocurrió un error y no se pudo borrar la imagen.</string>
    <string name="ERROR_UPLOADING">Ocurrió un error durante la subida. Vuelva a intentarlo</string>
    <string name="ERROR_GALLERY_ACCESS">Ocurrió un error accediendo a la galería.</string>
    <string name="logged_in">Conectado</string>
    <string name="wrong_credentials">Credenciales incorrectas</string>
    <string name="MSG_UPLOADED">Subida correcta</string>


    <string formatted='false' name="TAKE_PHOTO">Hacer una foto</string>
    <string formatted='false' name="CHOOSE_FROM_GALERY">Seleccionar foto de la galería</string>
    <string formatted='false' name="CANCEL">Cancelar</string>
</resources>
