<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_above="@+id/ll_delete">

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/ll_title"/>

        <LinearLayout
            android:id="@+id/ll_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_above="@+id/ll_description"
            android:gravity="bottom">
            <TextView
                android:id="@+id/tv_image_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_title"
                android:layout_marginRight="10dp"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_image_title_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/tv_image_title"
                android:singleLine="true"
                android:ellipsize="end"
                android:textSize="16sp"
                android:text="@string/image_title_default"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:gravity="bottom">
            <TextView
                android:id="@+id/tv_image_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_description"
                android:layout_marginRight="10dp"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_image_description_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/tv_image_title"
                android:singleLine="true"
                android:ellipsize="end"
                android:textSize="16sp"
                android:text="@string/image_description_default"/>
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_delete"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@mipmap/delete_icon"/>
    </LinearLayout>
</RelativeLayout>