<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_above="@+id/ll_delete">

        <ImageView
            android:id="@+id/iv_image_placeholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/ll_image_info"
            android:src="@mipmap/placeholder_camera"/>

        <LinearLayout
            android:id="@+id/ll_image_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:gravity="bottom">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                app:hintTextAppearance="@style/MyHintText">

                <EditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/image_title"
                    android:singleLine="true"
                    android:maxLength="50"
                    android:theme="@style/MyEditText"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                app:hintTextAppearance="@style/MyHintText">

                <EditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/image_description"
                    android:singleLine="true"
                    android:maxLength="200"
                    android:theme="@style/MyEditText"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_confirm_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/white"
            android:enabled="false"
            android:background="@drawable/login_rounded_button"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</RelativeLayout>